fixed spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 .featured1 {
-width: 500px;
+width: 300px;
 
 }
 
@@ -7,9 +7,9 @@ width: 500px;
     background-color: white;
     position: absolute;
     top: 30px;
-    right: -1050px;
+    right: -799px;
     text-align: left;
-    width: 1199px;
+    width: 900px;
     height: 407px;      
     border-radius: 0px 11px 0px 11px;
     border: solid 1px black;
@@ -26,9 +26,9 @@ width: 500px;
 }
 
 .city-list {
-    padding: 0px 0 0 0px;
-    background-color: white;
-    width: 375px;
+    padding: 4px 0 0 0px;
+    background-color: lightsalmon;
+    width: 222px;
  
 }
 
@@ -37,7 +37,7 @@ width: 500px;
     border: black solid 1px;
     padding: 18px 0 0 10px;
     border-radius: 0 11px 0 11px;
-    height: 75px;
+    height: 69px;
     font-size: 22px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: white;
@@ -58,7 +58,7 @@ h3 {
  }  
 
  body {
- background-color: rgb(240, 243, 247);    
+ background-color: lightsalmon;    
  }
 
 
@@ -68,7 +68,7 @@ h3 {
      height: 100px
      width: 300px;
      top: 450px;
-     right: -169px;
+     right: -211px;
     }
 
 .forecast1{
@@ -77,7 +77,7 @@ width: 175px;
 height: 175px;
 background-color: powderblue;
 border-radius: 0px 11px 0px 11px;
-left: 20px;
+left: 0px;
 border: solid 1px black;
  }
 
@@ -87,7 +87,7 @@ width: 175px;
 height: 175px;
 background-color: powderblue;
 border-radius: 0px 11px 0px 11px;
-right: -120px;
+right: -60px;
 border: solid 1px black;
     
  }
@@ -98,7 +98,7 @@ border: solid 1px black;
     height: 175px;
     background-color: powderblue;
     border-radius: 0px 11px 0px 11px;
-    right: -365px;
+    right: -245px;
     border: solid 1px black;
  }
 
@@ -108,7 +108,7 @@ border: solid 1px black;
     height: 175px;
     background-color: powderblue;
     border-radius: 0px 11px 0px 11px;
-    right: -610px;
+    right: -430px;
     border: solid 1px black;
  }
 
@@ -118,10 +118,11 @@ border: solid 1px black;
     height: 175px;
     background-color: powderblue;
     border-radius: 0px 11px 0px 11px;
-    right: -855px;
+    right: -615px;
     border: solid 1px black;
  }
 
  .uVIndex1, .uVIndex2, .uVIndex3, .uVIndex4, .uVIndex5, .uVIndex6, .uVIndex7 {
      background-color: red;
  }
+
